--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nirajroy149.github.io/video-hub-chakraUi",
+  "homepage": "https://nirajroy149.github.io/video-hub-chakraUi/#",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
